# safe_backup

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-dev  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: build-and-publish-to-multiple-registries.yml  python-publish.yml
safe_backup/: __init__.py  _version.py  safe_backup.py
