[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0", 
    "wheel",
    ]
build-backend = "setuptools.build_meta"

[project]
name = "safe_backup"
dynamic = ["version"]
dependencies=[
    'async-timeout==4.0.3',
    'boto3==1.28.62',
    'botocore==1.31.62',
    'certifi==2023.7.22',
    'jmespath==1.0.1',
    'minio==7.1.17',
    'python-dateutil==2.8.2',
    'redis==5.0.0',
    's3transfer==0.7.0',
    'six==1.16.0',
    'urllib3==2.0.5',
]
requires-python = ">= 3.10"
authors = [
    {name = "Vahidreza Naderi", email = "vahidrnaderi@gmail.com"}
]
maintainers = [
    {name = "Vahidreza Naderi", email = "vahidrnaderi@gmail.com"}
]
description="This program creates a secure backup of your files from a specified directory or an object storage location."
readme = "README.md"
license = {file = "LICENSE"}
keywords = [
    "safe", 
    "backup", 
    "safebackup", 
    "safe_backup", 
    "safe backup",
    "safe-backup",
    "copy",
    "safe copy",
    "s3",
    "s3 copy",
    "s3 backup"
]

[project.urls]
Repository='https://github.com/vahidrnaderi/safe_backup'

[project.scripts]
sbackup = "safe_backup.safe_backup:main"

[tool.setuptools_scm]
version_file = "safe_backup/_version.py"
version_scheme = "post-release"
local_scheme = "dirty-tag"

[tool.setuptools.dynamic]
version = {attr = "safe_backup.__version__"}
